connect express to mongodb

--- a/backend/package.json
+++ b/backend/package.json
@@ -4,7 +4,8 @@
   "description": "A storage for my favorite quotes",
   "main": "index.js",
   "dependencies": {
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "mongoose": "^5.11.7"
   },
   "devDependencies": {
     "nodemon": "^2.0.6"
