--- a/backend/package.json
+++ b/backend/package.json
@@ -4,6 +4,7 @@
   "description": "A storage for my favorite quotes",
   "main": "index.js",
   "dependencies": {
+    "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "mongoose": "^5.11.7"
   },
