gitignore not working for .env

--- a/backend/process.env
+++ b/backend/process.env
@@ -1,3 +1,1 @@
-DB_NAME='elijahlee'
-DB_PASS='elijahlee!'
-MONGO_URI='mongodb+srv://elijahlee:elijahlee!@cluster0.f9k2w.mongodb.net/quotesDB?retryWrites=true&w=majority'
+MONGO_URI='mongodb+srv://test:test123@cluster0.f9k2w.mongodb.net/quotesDB?retryWrites=true&w=majority'
