--- a/backend/package.json
+++ b/backend/package.json
@@ -12,6 +12,7 @@
     "nodemon": "^2.0.6"
   },
   "scripts": {
+    "dev": "nodemon index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Elijah Lee",
